[gd_scene load_steps=9 format=3 uid="uid://uwvffomcfumc"]

[ext_resource type="Texture2D" uid="uid://ciw6sitwyd48w" path="res://assets/interface/button-9patch.png" id="1_m1n1w"]
[ext_resource type="Script" path="res://scripts/interface/main_menu.gd" id="1_ns5gf"]
[ext_resource type="FontFile" uid="uid://b4pl3jfkalcos" path="res://assets/interface/First_Coffee_Pixel.ttf" id="2_jgvug"]

[sub_resource type="Theme" id="Theme_f7x37"]
Label/colors/font_shadow_color = Color(0.14902, 0.196078, 0.219608, 1)
Label/constants/shadow_offset_x = 3
Label/constants/shadow_offset_y = 3
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 36
Label/fonts/font = ExtResource("2_jgvug")

[sub_resource type="Animation" id="Animation_1dy6j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backdrop:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.00392157)]
}

[sub_resource type="Animation" id="Animation_r122w"]
resource_name = "hide_menu"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backdrop:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.6, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TitleDrop:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/StartButton:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/StartButton:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xguln"]
resource_name = "show_menu"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Backdrop:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(-0.1, 0, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TitleDrop:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/StartButton:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(2, 3)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/StartButton:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pul7"]
_data = {
"RESET": SubResource("Animation_1dy6j"),
"hide_menu": SubResource("Animation_r122w"),
"show_menu": SubResource("Animation_xguln")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ns5gf")
metadata/_edit_use_anchors_ = true

[node name="Backdrop" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0.00392157)
offset_left = -1306.0
offset_top = -558.0
offset_right = 2429.0
offset_bottom = 1417.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 1.16226e-10)
layout_mode = 0
offset_left = 809.0
offset_top = 192.0
offset_right = 951.0
offset_bottom = 245.0
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Control/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_m1n1w")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Label" type="Label" parent="Control/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -28.0
offset_right = 72.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f7x37")
text = "FIND ME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleDrop" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.975725)
layout_mode = 0
offset_left = 713.0
offset_top = 74.0
offset_right = 1055.0
offset_bottom = 163.0
theme = SubResource("Theme_f7x37")
theme_override_font_sizes/font_size = 64
text = "Lost Her Mind"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4pul7")
}
autoplay = "show_menu"

[connection signal="mouse_entered" from="Control/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
